--- a/main/css/index-pc.css
+++ b/main/css/index-pc.css
@@ -174,6 +174,7 @@ nav > ul {
   margin-right: 45px;
   height: 100%;
   width: 100%;
+  z-index: 3000;
 }
 /* 구글 번역 api 커스텀 */
 .goog-te-gadget {
@@ -265,13 +266,14 @@ nav > ul {
   width: 20%;
 }
 
+.site_map_logo a img {
+  width: 80%;
+}
+
 .site_map_header_ui {
   width: 25%;
 }
 
-.site_map_logo a img {
-  width: 80%;
-}
 .site_map_close_btn a img {
   width: 5%;
 }
